# twitter-clone

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
src/: config.py  db.py  exceptions.py  main.py  schemas.py
src/auth/: crud.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/config/: project_config.py
src/config/database/: db_generate_data.py
src/core/: lifespan.py
src/core/config/: config.py
src/core/config/database/: db_config.py
src/core/exceptions/: exceptions.py
src/core/utils/: file_storage.py  logging.py
src/dependencies/: auth_dependencies.py
src/exceptions/: exception_handlers.py
src/medias/: crud.py  models.py  router.py  schemas.py  service.py
src/models/: base_model.py  follow_model.py  media_model.py  tweet_like_model.py  tweet_model.py  user_model.py
src/modules/media/: repository.py  service.py
src/modules/tweets/: models.py  schemas.py
src/modules/users/: models.py  repository.py  service.py
src/repositories/: media_repository.py  sqlalchemy_repository.py  tweet_repository.py  user_repository.py
src/routers/: media_router.py  tweet_router.py  user_router.py
src/schemas/: api_key_schema.py  media_schema.py  status_schema.py  user_schema.py
src/services/: media_service.py  user_service.py
src/shared/repositories/: sqlalchemy.py
src/shared/schemas/: base.py  errors.py
src/tweets/: crud.py  models.py  router.py  schemas.py  service.py
tests/: test_main.py
